tests/tc/neg/list01-unify.js
/*@ main :: (x:<l>, v:{number | true})/l |-> list[number] => <m>/m |-> list[number] */
function main(x, a) {
    // z = { data: a, next: x };
    return x;
}
